Fixed layout issues, searching and queuing also working. TODO: Fix deletion

--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -40,9 +40,8 @@ nav{ float: right; line-height: 40px; text-align: center; width: 240px;}
 }
 
 
-#results{ background: #f2f5fd; background: #f5f5f5; height: 944px; overflow-x: hidden; width: 640px;}
+#results{ background: #f2f5fd; background: #f5f5f5; overflow: scroll; overflow-x: hidden; height: 792px; width: 100%;}
 .video{ cursor: pointer; min-height: 90px; padding: 10px; padding-left: 140px; position: relative;}
-.video:nth-child(2n-1){ background: white;}
 .video-image{ float: left; left: 10px; position: absolute; top: 10px;}
 .video-title{ padding-top: 5px;}
 .video-author{ color: #df1f1f; font-size: 14px; padding: 5px 0;}
